# cmd/main.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	pkgAccount "github.com/hojin-kr/haru/cmd/account"
+	pkgEvent "github.com/hojin-kr/haru/cmd/boss"
 	docs "github.com/hojin-kr/haru/cmd/docs"
 	pkgProfile "github.com/hojin-kr/haru/cmd/profile"
 	"github.com/hojin-kr/haru/cmd/trace"
@@ -29,6 +30,8 @@ func main() {
 		v1.GET("account", pkgAccount.Get)
 		v1.GET("profile", pkgProfile.Get)
 		v1.POST("profile", pkgProfile.Post)
+		v1.GET("boss/attack", pkgEvent.Get)
+		v1.POST("boss/attack", pkgEvent.Post)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
